--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #e43613;
+      background-color: #666666;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations</h1>
-    <h2>Revision 4.0</h2>
+    <h2>Revision 4.1</h2>
   </div>
 </body>
 </html>
